--- a/APIFramework/pom.xml
+++ b/APIFramework/pom.xml
@@ -31,14 +31,14 @@
     <scope>test</scope>
 </dependency>
 
-<dependency>
+ <dependency>
     <groupId>com.relevantcodes</groupId>
     <artifactId>extentreports</artifactId>
     <version>2.41.2</version>
 </dependency>
 
 
-<!-- https://mvnrepository.com/artifact/org.w3c/dom -->
+ <!--https://mvnrepository.com/artifact/org.w3c/dom-->
 <dependency>
     <groupId>org.w3c</groupId>
     <artifactId>dom</artifactId>
@@ -47,7 +47,7 @@
 
 
 
-<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+ <!--https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind-->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
@@ -55,7 +55,7 @@
 </dependency>
 
 
-<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+ <!--https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl-->
 <dependency>
     <groupId>net.sourceforge.jexcelapi</groupId>
     <artifactId>jxl</artifactId>
@@ -99,8 +99,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${jdk.level}</source>
-					<target>${jdk.level}</target>
+					 <source>1.8</source>
+                <target>1.8</target>
 				</configuration>
 			</plugin>
 		
